fixed some hover issues basic user page

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
 
     <div ui-view></div>
 
+    <user-hover-popup></user-hover-popup>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
